réalisation de toutes les issues concernant la version mobile

--- a/src/utils/css/header.css
+++ b/src/utils/css/header.css
@@ -63,7 +63,7 @@
   display: flex;
   justify-content: center;
   align-items: center; 
-  padding: 20px;
+  padding: 10px;
   height: 80px;
   position: fixed;
   top: 45px; 
